--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -9,7 +7,8 @@ services:
       POSTGRES_PASSWORD: ecowake_secure_2025
       POSTGRES_DB: ecowake_db
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - ecowake_network
     restart: unless-stopped
@@ -27,6 +26,8 @@ services:
     environment:
       DATABASE_URL: postgresql://ecowake:ecowake_secure_2025@postgres:5432/ecowake_db
       API_ENV: production
+    ports:
+      - "8000:8000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -34,7 +35,7 @@ services:
       - ecowake_network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -48,12 +49,15 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
-      - ./frontend/dist:/usr/share/nginx/html
+      - ./frontend/dist:/usr/share/nginx/html:ro
     depends_on:
       - backend
     networks:
       - ecowake_network
     restart: unless-stopped
+
+volumes:
+  postgres_data:
 
 networks:
   ecowake_network:
