--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,65 +22,75 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 20M;
+    client_max_body_size 100M;
 
     gzip on;
     gzip_vary on;
-    gzip_proxied any;
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss 
-               application/rss+xml font/truetype font/opentype 
-               application/vnd.ms-fontobject image/svg+xml;
+               application/json application/javascript application/xml+rss;
 
-    # Redirect HTTP to HTTPS
+    # Upstream backend
+    upstream backend {
+        server backend:8000;
+    }
+
+    # HTTP redirect to HTTPS
     server {
         listen 80;
-        server_name ecowake.online www.ecowake.online;
+        server_name ecowake.online www.ecowake.online localhost;
         return 301 https://$server_name$request_uri;
     }
 
-    # HTTPS Server
+    # HTTPS
     server {
         listen 443 ssl http2;
-        server_name ecowake.online www.ecowake.online;
+        server_name ecowake.online www.ecowake.online localhost;
 
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-        # React SPA - Frontend
+        # Frontend - raiz
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
-            index index.html;
-            
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-            }
         }
 
-        # API Backend
-        location /api {
-            proxy_pass http://backend:8000;
+        # API - proxy reverso
+        location /api/ {
+            proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
+            proxy_buffering off;
+            proxy_request_buffering off;
         }
 
         # Health check
         location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+        }
+
+        # Power BI
+        location /reports/ {
+            alias /usr/share/nginx/html/reports/;
+            add_header X-Content-Type-Options nosniff;
+            add_header X-Frame-Options "SAMEORIGIN";
+        }
+
+        # Assets
+        location /assets/ {
+            alias /usr/share/nginx/html/assets/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
         }
     }
 }
