--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,70 +27,54 @@ http {
     gzip on;
     gzip_vary on;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss;
 
-    # Upstream backend
     upstream backend {
         server backend:8000;
     }
 
-    # HTTP redirect to HTTPS
+    # HTTP
     server {
         listen 80;
-        server_name ecowake.online www.ecowake.online localhost;
-        return 301 https://$server_name$request_uri;
-    }
-
-    # HTTPS
-    server {
-        listen 443 ssl http2;
-        server_name ecowake.online www.ecowake.online localhost;
-
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-
-        # Frontend - raiz
+        server_name _;
+        
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
         }
 
-        # API - proxy reverso
         location /api/ {
             proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering off;
-            proxy_request_buffering off;
         }
 
-        # Health check
         location /health {
             proxy_pass http://backend;
             proxy_set_header Host $host;
         }
+    }
 
-        # Power BI
-        location /reports/ {
-            alias /usr/share/nginx/html/reports/;
-            add_header X-Content-Type-Options nosniff;
-            add_header X-Frame-Options "SAMEORIGIN";
+    # HTTPS (se certificados existirem)
+    server {
+        listen 443 ssl http2 default_server;
+        server_name _;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Assets
-        location /assets/ {
-            alias /usr/share/nginx/html/assets/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+        location /api/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
