--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,16 +27,16 @@ http {
     gzip on;
     gzip_vary on;
     gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript;
 
     upstream backend {
         server backend:8000;
     }
 
-    # HTTP
     server {
         listen 80;
         server_name _;
-        
+
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
@@ -44,6 +44,7 @@ http {
 
         location /api/ {
             proxy_pass http://backend;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -52,29 +53,6 @@ http {
 
         location /health {
             proxy_pass http://backend;
-            proxy_set_header Host $host;
-        }
-    }
-
-    # HTTPS (se certificados existirem)
-    server {
-        listen 443 ssl http2 default_server;
-        server_name _;
-
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        location /api/ {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
