feat: Integração de dados AIS da Transpetro com fallback Power BI
- ✅ Script para importar CSVs da frota real
- ✅ Componente Power BI com fallback dashboard
- ✅ Tabela de histórico AIS
- ✅ Suporte a 20 navios da Transpetro
- ✅ Geolocalização em tempo real

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,17 @@ Thumbs.db
 
 # Logs
 *.log
+# Dados AIS
+backend/data/ais/*.csv
+data/postgres/
+
+# Environment
+.env
+.env.local
+
+# Certificados
+nginx/ssl/
+
+# Cache
+__pycache__/
+*.pyc
