--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8000
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Importar dados AIS se disponíveis
+CMD ["bash", "-c", "python3 import_ais_data.py || true && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"]
