feat: Sistema completo de processamento de dados AIS
- ✅ Script de download automático de CSVs do Google Drive
- ✅ Processador de dados AIS com cálculo de bioincrustação
- ✅ Tabelas de histórico, manutenção, alertas
- ✅ Índices otimizados para queries
- ✅ 20 navios da frota Transpetro

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,5 +7,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-# Importar dados AIS se disponíveis
-CMD ["bash", "-c", "python3 import_ais_data.py || true && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"]
+# Criar pasta de dados
+RUN mkdir -p /app/data/ais
+
+# Executar processamento de dados e iniciar API
+CMD ["bash", "-c", "python3 process_ais_data.py 2>&1 || true && uvicorn main:app --host 0.0.0.0 --port 8000"]
