--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,5 +10,5 @@ COPY . .
 # Criar pasta de dados
 RUN mkdir -p /app/data/ais
 
-# Executar processamento de dados e iniciar API
-CMD ["bash", "-c", "python3 process_ais_data.py 2>&1 || true && uvicorn main:app --host 0.0.0.0 --port 8000"]
+# Executar download e processamento
+CMD ["bash", "-c", "python3 scripts/download_ais_data.py 2>&1 && python3 process_ais_data.py 2>&1 && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"]
