--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,3 +61,18 @@ volumes:
 networks:
   ecowake_network:
     driver: bridge
+
+  dashboard:
+    build:
+      context: ./dashboard
+      dockerfile: Dockerfile
+    container_name: ecowake_dashboard
+    ports:
+      - "8050:8050"
+    depends_on:
+      - backend
+    networks:
+      - ecowake_network
+    environment:
+      API_URL: http://backend:8000/api
+    restart: unless-stopped
